2004-11-17 David Inglis
	
	ICDIDebugger change to use IBinaryObject instead of IBnaryExecutable
	
	* stc/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	
2004-11-17 Alain Magloire
	Fix for 78816
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java

2004-11-16 Alain Magloire
	Optimize things by providing a new method
	ICDIRegisterGroup.hasRegisters();
	* cdi/org/eclipse/cdt/debug/core/cdi/model/RegisterGroup.java

2004-11-16 Alain Magloire
	Remove some warnings and use the new Launch key
	to decide whether or not to use pseudo tty.
	* mi/org/eclipse/cdt/debug/mi/core/TxThread.java
	* mi/org/eclipse/cdt/debug/mi/core/command/RawCommand.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-11-16 Alain Magloire
	NPE when watchpoints are set in the gdb console.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2004-11-16 Alain Magloire
	Do not check for isEnable() when changing condition.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/mode/Breakpoint.java

2004-11-12 Mikhail Khodjaiants
	Implemented the "equals' method of the "Condition" class.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Condition.java

2004-11-12 Alain Magloire
	Fix for PR 78488
	* mi/org/eclipse/cdt/debug/mi/core/command/MICommand.java

2004-11-11 Alain Magloire
	Fix for PR 75000, from PalmSource
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/VariableDescriptor.java
	* mi/org/eclipse/cdt/debug/mi/core/command/MIVarInfoType.java

2004-11-10 Alain Magloire
	Fix for PR 51113 and PR 66268
	It allow more flexibility in the GDB console, for example
	when gdb require interactive questions.

	* mi/org/eclipse/cdt/debug/mi/core/CLIProcessor.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/RxThread.java
	* mi/org/eclipse/cdt/debug/mi/core/SessionProcess.java
	* mi/org/eclipse/cdt/debug/mi/core/TxThread.java
	* mi/org/eclipse/cdt/debug/core/command/MIGDBShowPrompt.java